--- a/Data Pre and Post Processing/patchify.ipynb
+++ b/Data Pre and Post Processing/patchify.ipynb
@@ -887,8 +887,156 @@
     "import cv2\n",
     "import numpy as np\n",
     "import os\n",
-    "from albumentations import Compose, Resize, PadIfNeeded, LongestMaxSize\n",
+    "from albumentations import Compose, Resize, PadIfNeeded, LongestMaxSize, Sharpen, CLAHE\n",
     "from PIL import Image\n",
+    "import torch\n",
+    "from torchvision import transforms\n",
+    "import torchstain\n",
+    " \n",
+    "target = cv2.cvtColor(cv2.imread(\"/home/dawlat.akaila/Documents/DL_LABS/PROJECT/ref2.jpg\"), cv2.COLOR_BGR2RGB)\n",
+    "T = transforms.Compose([\n",
+    "transforms.ToTensor(),\n",
+    "transforms.Lambda(lambda x: x*255)\n",
+    "])\n",
+    "normalizer = torchstain.normalizers.ReinhardNormalizer(backend='torch')\n",
+    "normalizer.fit(T(target))\n",
+    " \n",
+    "# Preprocessing\n",
+    "def normalization(img):\n",
+    "    to_transform = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
+    "    t_to_transform = T(to_transform)\n",
+    "    norm = normalizer.normalize(I=t_to_transform)\n",
+    "    norm = np.array(norm).astype(np.uint8)\n",
+    "    return norm\n",
+    " \n",
+    "def process_images(image_folder, mask_folder, output_folder):\n",
+    "    # Create the output folder if it does not exist\n",
+    "    if not os.path.exists(output_folder):\n",
+    "        os.makedirs(output_folder)\n",
+    " \n",
+    "    # Define the transformation: resize and pad to maintain aspect ratio\n",
+    "    transform = Compose([\n",
+    "        LongestMaxSize(max_size=448),\n",
+    "        PadIfNeeded(min_height=448, min_width=448, border_mode=cv2.BORDER_CONSTANT, value=[0, 0, 0]),\n",
+    "        Sharpen(alpha=(0.1, 0.2), p=1),\n",
+    "        CLAHE(clip_limit=3.0, tile_grid_size=(2, 2), p=1),  # Local contrast enhancement\n",
+    "            ])\n",
+    " \n",
+    "    transforms_resize = Compose([LongestMaxSize(max_size=448)])\n",
+    " \n",
+    "    # Process each image and corresponding mask\n",
+    "    for filename in os.listdir(image_folder):\n",
+    "        if filename.endswith(('.png', '.jpg', '.jpeg', '.tif','.tiff')):  # Adjust the extension based on your images\n",
+    "            image_path = os.path.join(image_folder, filename)\n",
+    "            mask_path = os.path.join(mask_folder, filename)  # Assumes mask has same filename\n",
+    " \n",
+    "            # Load image and mask\n",
+    "            image = cv2.imread(image_path)\n",
+    "            mask = cv2.imread(mask_path, cv2.IMREAD_GRAYSCALE)\n",
+    " \n",
+    "            if image is not None and mask is not None:\n",
+    "                # Apply the transformations\n",
+    "                augmented = transform(image=image)\n",
+    "                image_resized = augmented['image']\n",
+    " \n",
+    "                org_image = transforms_resize(image=image)['image']\n",
+    "               \n",
+    " \n",
+    "                # normalization\n",
+    "                # normalized_image = normalization(image_resized)\n",
+    "                normalized_image = image_resized\n",
+    " \n",
+    "                # Optional: Adjust mask processing here, e.g., apply threshold\n",
+    "                _, mask = cv2.threshold(mask, 127, 255, cv2.THRESH_BINARY)\n",
+    " \n",
+    "                # Find contours in the mask image\n",
+    "                contours, _ = cv2.findContours(mask, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
+    " \n",
+    "                cell_count = 0  # Initialize cell count\n",
+    "                for contour in contours:\n",
+    "                    x, y, w, h = cv2.boundingRect(contour)\n",
+    "                    if w < 20 or h < 20:  # Skip small contours\n",
+    "                        continue\n",
+    "                   \n",
+    "                    # Calculate square bounding box\n",
+    "                    side_len = max(w, h)\n",
+    "                    center_x, center_y = x + w // 2, y + h // 2\n",
+    "                    x_new = max(center_x - side_len // 2, 0)\n",
+    "                    y_new = max(center_y - side_len // 2, 0)\n",
+    "                   \n",
+    "                   \n",
+    "                    # Adjust coordinates if the square goes beyond the image dimensions\n",
+    "                    if x_new + side_len > normalized_image.shape[1]:\n",
+    "                        x_new = normalized_image.shape[1] - side_len\n",
+    "                    if y_new + side_len > normalized_image.shape[0]:\n",
+    "                        y_new = normalized_image.shape[0] - side_len\n",
+    "                                       \n",
+    "                    difference= (normalized_image.shape[0] - org_image.shape[0]) // 2\n",
+    "                    if difference >= y_new:\n",
+    "                        y_new = difference\n",
+    "                    elif y_new + side_len >= normalized_image.shape[0] - difference:\n",
+    "                        var_1 = (y_new + side_len) - (normalized_image.shape[0] - difference)\n",
+    "                        y_new = y_new - var_1\n",
+    " \n",
+    "                    cropped_img = normalized_image[y_new:y_new + side_len, x_new:x_new + side_len]\n",
+    " \n",
+    "                    # Resize the cell to 100x100\n",
+    "                    resized_img = cv2.resize(cropped_img, (100, 100))\n",
+    "                    resized_img = normalization(resized_img)\n",
+    "                    pil_img = Image.fromarray(cv2.cvtColor(resized_img, cv2.COLOR_BGR2RGB))\n",
+    " \n",
+    "                    # Save each cell with a unique filename\n",
+    "                    cell_count += 1\n",
+    "                    cell_filename = f\"{os.path.splitext(filename)[0]}.{cell_count}.png\"\n",
+    "                    cell_output_path = os.path.join(output_dir, cell_filename)\n",
+    "                    pil_img.save(cell_output_path)\n",
+    "                    print(f\"Saved cell {cell_filename}\")\n",
+    " \n",
+    "                # Print a message if no valid contours were found\n",
+    "                if not contours:\n",
+    "                    print(f\"No valid contours found for {filename}, saving resized original image.\")\n",
+    " \n",
+    "    print(\"All images processed.\")\n",
+    " \n",
+    "# Define your directory paths\n",
+    "image_dir = '/home/dawlat.akaila/Documents/DL_LABS/PROJECT/DATA_MASKS/val/ALL'  \n",
+    "mask_dir = '/home/dawlat.akaila/Documents/DL_LABS/PROJECT/DATA_MASKS/val_masks/ALL'  \n",
+    "output_dir = '/home/dawlat.akaila/Documents/DL_LABS/PROJECT/DATA_MASKS/try/ALL'\n",
+    " \n",
+    "# Run the processing\n",
+    "process_images(image_dir, mask_dir, output_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "import os\n",
+    "from albumentations import Compose, Resize, PadIfNeeded, LongestMaxSize, Sharpen, CLAHE\n",
+    "from PIL import Image\n",
+    "import torch\n",
+    "from torchvision import transforms\n",
+    "import torchstain\n",
+    "\n",
+    "target = cv2.cvtColor(cv2.imread(\"/home/dawlat.akaila/Documents/DL_LABS/PROJECT/ref2.jpg\"), cv2.COLOR_BGR2RGB)\n",
+    "T = transforms.Compose([\n",
+    "transforms.ToTensor(),\n",
+    "transforms.Lambda(lambda x: x*255)\n",
+    "])\n",
+    "normalizer = torchstain.normalizers.ReinhardNormalizer(backend='torch')\n",
+    "normalizer.fit(T(target))\n",
+    "\n",
+    "# Preprocessing \n",
+    "def normalization(img):\n",
+    "    to_transform = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
+    "    t_to_transform = T(to_transform)\n",
+    "    norm = normalizer.normalize(I=t_to_transform)\n",
+    "    norm = np.array(norm).astype(np.uint8)\n",
+    "    return norm\n",
     "\n",
     "def process_images(image_folder, mask_folder, output_folder):\n",
     "    # Create the output folder if it does not exist\n",
@@ -899,7 +1047,11 @@
     "    transform = Compose([\n",
     "        LongestMaxSize(max_size=448),\n",
     "        PadIfNeeded(min_height=448, min_width=448, border_mode=cv2.BORDER_CONSTANT, value=[0, 0, 0]),\n",
-    "    ])\n",
+    "        Sharpen(alpha=(0.1, 0.2), p=1),\n",
+    "        CLAHE(clip_limit=3.0, tile_grid_size=(2, 2), p=1),  # Local contrast enhancement\n",
+    "            ])\n",
+    "\n",
+    "    transforms_resize = Compose([LongestMaxSize(max_size=448)])\n",
     "\n",
     "    # Process each image and corresponding mask\n",
     "    for filename in os.listdir(image_folder):\n",
@@ -915,6 +1067,13 @@
     "                # Apply the transformations\n",
     "                augmented = transform(image=image)\n",
     "                image_resized = augmented['image']\n",
+    "\n",
+    "                org_image = transforms_resize(image=image)['image']\n",
+    "                \n",
+    "\n",
+    "                # normalization \n",
+    "                # normalized_image = normalization(image_resized)\n",
+    "                normalized_image = image_resized\n",
     "\n",
     "                # Optional: Adjust mask processing here, e.g., apply threshold\n",
     "                _, mask = cv2.threshold(mask, 127, 255, cv2.THRESH_BINARY)\n",
@@ -933,17 +1092,34 @@
     "                    center_x, center_y = x + w // 2, y + h // 2\n",
     "                    x_new = max(center_x - side_len // 2, 0)\n",
     "                    y_new = max(center_y - side_len // 2, 0)\n",
-    "\n",
+    "                    \n",
+    "                    # print(y_new)\n",
     "                    # Adjust coordinates if the square goes beyond the image dimensions\n",
-    "                    if x_new + side_len > image_resized.shape[1]:\n",
-    "                        x_new = image_resized.shape[1] - side_len\n",
-    "                    if y_new + side_len > image_resized.shape[0]:\n",
-    "                        y_new = image_resized.shape[0] - side_len\n",
+    "                    if x_new + side_len > normalized_image.shape[1]:\n",
+    "                        x_new = normalized_image.shape[1] - side_len\n",
+    "                    if y_new + side_len > normalized_image.shape[0]:\n",
+    "                        y_new = normalized_image.shape[0] - side_len\n",
+    "                    \n",
+    "                    \n",
+    "                    # difference= normalized_image.shape[0] - org_image.shape[0] // 2\n",
+    "                    # if difference >= y_new:\n",
+    "                    #     y_new = difference\n",
+    "                    #     print(\"here\")\n",
+    "                    # elif y_new - side_len >= normalized_image.shape[0] - difference:\n",
+    "                    #     y_new = normalized_image.shape[0] - difference - side_len\n",
+    "                    #     print(\"here2\")\n",
+    "                        \n",
+    "                    \n",
+    "                    # print(y_new)\n",
+    "                    # print(org_image.shape[0])\n",
+    "                    \n",
+    "                    # print(x_new + side_len, y_new + side_len)\n",
     "\n",
-    "                    cropped_img = image_resized[y_new:y_new + side_len, x_new:x_new + side_len]\n",
+    "                    cropped_img = normalized_image[y_new:y_new + side_len, x_new:x_new + side_len]\n",
     "\n",
     "                    # Resize the cell to 100x100\n",
     "                    resized_img = cv2.resize(cropped_img, (100, 100))\n",
+    "                    resized_img = normalization(resized_img)\n",
     "                    pil_img = Image.fromarray(cv2.cvtColor(resized_img, cv2.COLOR_BGR2RGB))\n",
     "\n",
     "                    # Save each cell with a unique filename\n",
@@ -960,9 +1136,9 @@
     "    print(\"All images processed.\")\n",
     "\n",
     "# Define your directory paths\n",
-    "image_dir = '/home/dawlat.akaila/Documents/DL_LABS/PROJECT/DATA_MASKS/val/CML'  \n",
-    "mask_dir = '/home/dawlat.akaila/Documents/DL_LABS/PROJECT/DATA_MASKS/val_masks/CML'   \n",
-    "output_dir = '/home/dawlat.akaila/Documents/DL_LABS/PROJECT/DATA_MASKS/patched_val/CML' \n",
+    "image_dir = '/home/dawlat.akaila/Documents/DL_LABS/PROJECT/DATA_MASKS/val/ALL'  \n",
+    "mask_dir = '/home/dawlat.akaila/Documents/DL_LABS/PROJECT/DATA_MASKS/val_masks/ALL'   \n",
+    "output_dir = '/home/dawlat.akaila/Documents/DL_LABS/PROJECT/DATA_MASKS/try/ALL' \n",
     "\n",
     "# Run the processing\n",
     "process_images(image_dir, mask_dir, output_dir)\n"
