--- a/Data Pre and Post Processing/preprocessing_slides.ipynb
+++ b/Data Pre and Post Processing/preprocessing_slides.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,13 @@
     "from PIL import Image\n",
     "import torch\n",
     "from torchvision import transforms\n",
-    "import torchstain"
+    "import torchstain\n",
+    "from tqdm import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,19 +39,28 @@
     "    norm = np.array(norm).astype(np.uint8)\n",
     "    return norm\n",
     "\n",
-    "transform = Compose([Resize(max_size=448)])"
+    "transform = Compose([Resize(width=448, height=448)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 151/151 [00:19<00:00,  7.67it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "# walk through a directory and apply the function to all images and resize \n",
-    "image_folder = '/l/users/20020065/leuk/ai702/data/val/CLL'\n",
-    "save_folder = '/home/dawlat.akaila/Documents/DL_LABS/PROJECT/Processed_Data/Train/CLL'\n",
-    "for filename in os.listdir(image_folder):\n",
+    "image_folder = '/l/users/20020065/leuk/ai702/data/val/CML'\n",
+    "save_folder = '/home/dawlat.akaila/Documents/DL_LABS/PROJECT/Processed_Data/Val/CML'\n",
+    "os.makedirs(save_folder, exist_ok=True)\n",
+    "for filename in tqdm(os.listdir(image_folder)):\n",
     "        if filename.endswith(('.png', '.jpg', '.jpeg', '.tif','.tiff')):  # Adjust the extension based on your images\n",
     "            image_path = os.path.join(image_folder, filename)\n",
     "            # Load image\n",
@@ -65,8 +75,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "ai701",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
